インストール処理を実装

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,28 @@
 ---
-# defaults file for minio
+## -------------------------
+## インストールするバージョン
+## -------------------------
+minio_version: "latest"
+## -------------------------
+## アドレスおよびポート
+## -------------------------
+minio_address: ":9000"
+## -------------------------
+## コンソールアドレス及びポート
+## -------------------------
+minio_console_address: ":9001"
+
+## -------------------------
+## データの保存先
+## -------------------------
+minio_volumes:
+  - /opt/minio/data
+
+## -------------------------
+## 管理ユーザー名
+## -------------------------
+minio_root_user: minioadmin
+## -------------------------
+## 管理ユーザーパスワード
+## -------------------------
+minio_root_password: minioadmin
