--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,12 @@
 ---
 galaxy_info:
   role_name: minio
-  author: your name
-  description: your description
+  author: yoshiaki tanaka
+  description: Setup minio
   license: Apache
-  min_ansible_version: "2.10"
+  min_ansible_version: "2.13"
   platforms:
     - name: Debian
       versions:
         - bullseye
-        - buster
 dependencies: []
