--- a/tasks/service/Debian.yml
+++ b/tasks/service/Debian.yml
@@ -1,5 +1,5 @@
 ---
-- name: Service minio is active and enabled on system startup
+- name: Service minio srver is active and enabled on system startup
   ansible.builtin.systemd:
     name: minio
     state: started
