--- a/tasks/setting/Debian.yml
+++ b/tasks/setting/Debian.yml
@@ -2,14 +2,6 @@
 - name: Create/update setting file
   ansible.builtin.template:
     src: minio.j2
-    dest: /erc/minio/minio.conf
+    dest: "minio_environment_file"
     mode: "0644"
-- name: Add/update option setting
-  ansible.builtin.lineinfile:
-    path: /etc/minio/minio.conf
-    regexp: "^(#\\s+)?option_name="
-    line: option_name=option_value
-- name: Add/update custom setting
-  ansible.builtin.blockinfile:
-    path: /etc/minio/minio.conf
-    block: "{{ role_extra_cfg }}"
+  notify: restart minio
