インストール処理を修正

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,15 +2,24 @@
 ## -------------------------
 ## インストールするバージョン
 ## -------------------------
-minio_version: "latest"
+minio_version: latest
 ## -------------------------
-## アドレスおよびポート
+## アドレス(ホスト)
 ## -------------------------
-minio_address: ":9000"
+minio_address_host:
 ## -------------------------
-## コンソールアドレス及びポート
+## アドレス(ポート)
 ## -------------------------
-minio_console_address: ":9001"
+minio_address_port: 9000
+
+## -------------------------
+## コンソールアドレス(ホスト)
+## -------------------------
+minio_console_address_host:
+## -------------------------
+## コンソールアドレス(ポート)
+## -------------------------
+minio_console_address_port: 9001
 
 ## -------------------------
 ## データの保存先
