--- a/tasks/service/Debian.yml
+++ b/tasks/service/Debian.yml
@@ -4,3 +4,13 @@
     name: minio
     state: started
     enabled: true
+- name: allow MinIO web port
+  community.general.ufw:
+    rule: allow
+    port: "{{ minio_address_port }}"
+  when: not minio_address_host or minio_address_host in ['localhost', '127.0.0.1', '0.0.0.0']
+- name: allow MinIO console port
+  community.general.ufw:
+    rule: allow
+    port: "{{ minio_console_address_port }}"
+  when: not minio_console_address_host or minio_console_address_host in ['localhost', '127.0.0.1', '0.0.0.0']
