--- a/tasks/setting/Debian.yml
+++ b/tasks/setting/Debian.yml
@@ -1,16 +1,7 @@
 ---
-- name: Create environment file directory
-  ansible.builtin.file:
-    path: /home/{{ minio_user }}/etc/default
-    owner: "{{ minio_user }}"
-    group: "{{ minio_user }}"
-    state: directory
-    mode: "0755"
 - name: Create/update setting file
   ansible.builtin.template:
     src: minio.j2
-    dest: /home/{{ minio_user }}/etc/default/minio
-    owner: "{{ minio_user }}"
-    group: "{{ minio_user }}"
+    dest: "{{ minio_environment_file }}"
     mode: "0644"
   notify: restart minio
