変数の説明を調整

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 ## -------------------------
-## インストールするバージョン
+## MinIOのバージョン
 ## -------------------------
 minio_version: latest
 ## -------------------------
