--- a/tasks/dependency/Debian.yml
+++ b/tasks/dependency/Debian.yml
@@ -1,13 +1,18 @@
 ---
+- name: Add MinIO group
+  ansible.builtin.group:
+    name: "{{ mini_group }}"
+    system: true
 - name: Add MinIO user
   ansible.builtin.user:
     name: "{{ minio_user }}"
+    group: "{{ mini_group }}"
     system: true
 - name: Manage volume directory
   ansible.builtin.file:
     path: "{{ item }}"
     owner: "{{ minio_user }}"
-    group: "{{ minio_user }}"
+    group: "{{ mini_group }}"
     state: directory
     mode: "0755"
   loop: "{{ minio_volumes }}"
