--- a/tasks/service/Debian.yml
+++ b/tasks/service/Debian.yml
@@ -1,6 +1,6 @@
 ---
 - name: Service minio srver is active and enabled on system startup
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     name: minio
     state: started
     enabled: true
