--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Find pratform variable file
+- name: Find platform variable file
   ansible.builtin.set_fact:
     variable_file: "{{ lookup('first_found', params, errors='ignore') }}"
   vars:
@@ -10,18 +10,25 @@
         - "{{ ansible_facts.os_family }}.yml"
       paths:
         - vars
+  tags: role_minio_include_vars
 - name: Include variable file
-  ansible.builtin.include_vars: "{{ variable_file }}"
+  ansible.builtin.include_vars:
+    file: "{{ variable_file }}"
   when: variable_file | length > 0
+  tags: role_minio_include_vars
 - name: Include dependency task
-  ansible.builtin.import_tasks: dependency.yml
-  tags: dependency
+  ansible.builtin.import_tasks:
+    file: dependency.yml
+  tags: role_minio_dependency
 - name: Include package task
-  ansible.builtin.import_tasks: package.yml
-  tags: package
+  ansible.builtin.import_tasks:
+    file: package.yml
+  tags: role_minio_package
 - name: Include setting task
-  ansible.builtin.import_tasks: setting.yml
-  tags: setting
+  ansible.builtin.import_tasks:
+    file: setting.yml
+  tags: role_minio_setting
 - name: Include service task
-  ansible.builtin.import_tasks: service.yml
-  tags: service
+  ansible.builtin.import_tasks:
+    file: service.yml
+  tags: role_minio_service
