--- a/tasks/package/Debian.yml
+++ b/tasks/package/Debian.yml
@@ -8,9 +8,9 @@
           Accept: application/vnd.github+json
     - name: Merge Github API Authorization request header
       ansible.builtin.set_fact:
-        github_api_request_headers: "{{ github_api_request_headers | combine(merge_reauest_header) }}"
+        github_api_request_headers: "{{ github_api_request_headers | combine(merge_request_header) }}"
       vars:
-        merge_reauest_header:
+        merge_request_header:
           Authorization: Bearer {{ lookup('env', 'GITHUB_TOKEN') }}
       when: lookup('env', 'GITHUB_TOKEN') | length > 0
     - name: Get latest release
@@ -23,17 +23,15 @@
         minio_version: "{{ latest_releases.json.tag_name[8:-1] | regex_replace('(-|T)', '') }}"
 - name: Set variables
   ansible.builtin.set_fact:
-    minio_download_directory: "{{ ansible_facts['system'] | lower }}-{{ architecture_files[ansible_facts['architecture']] }}"
-    minio_download_file: minio_{{ minio_version }}.0.0_{{ architecture_files[ansible_facts['architecture']] }}.deb
+    minio_download_directory: "{{ ansible_facts['system'] | lower }}-{{ arch_type_maps[ansible_facts['architecture']] }}"
   vars:
-    architecture_files:
+    arch_type_maps:
       x86_64: amd64
+      aarch64: arm64
 - name: Install MinIO packages
   ansible.builtin.apt:
-    deb: https://dl.min.io/server/minio/release/{{ minio_download_directory }}/archive/{{ minio_download_file }}
-  notify: restart minio
-- name: Install the MinIO Client
-  ansible.builtin.get_url:
-    url: https://dl.min.io/client/mc/release/{{ minio_download_directory }}/mc
-    dest: /usr/local/bin/mc
-    mode: "0755"
+    deb: https://dl.min.io/server/minio/release/{{ minio_download_directory }}/minio.deb
+  notify: Restart minio
+- name: Install MinIO Client
+  ansible.builtin.apt:
+    deb: https://dl.min.io/client/mc/release/{{ minio_download_directory }}/mc.deb
